# r8ball

./: Cargo.toml
examples/: r8ball_conf.toml
examples/plugins/: big_output.sh  test.sh  truncated_read.sh
src/: main.rs
src/config/: .config_file.rs.~undo-tree~  cmdline.rs  config_file.rs  mod.rs
src/irc/: client.rs  iter.rs  mod.rs  net.rs  parse.rs  plugin.rs
src/irc/client/: helpers.rs  mod.rs
